Adding new function and some code refactoring

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,10 @@
  - Ближайшие планы:
     - Добавить WWD-нейросеть для ускорения реакции на обращения
     - Написать нормальный промпт для полного снятия цензуры
+    - Сделать частично неопределенные команды:
+       - Поиск файлов в директории
+       - Поиск сайтов в интернете
+       - Перевод слов на другие языки
  - Дальнейшие планы:
     - Сделать GUI на PyGame
     - Синтезировать голос Джарвиса как в фильме "Железный человек"
