--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@
        - Поиск файлов в директории
        - Поиск сайтов в интернете
        - Перевод слов на другие языки
+    - Добавить спящий режим
  - Дальнейшие планы:
     - Сделать GUI на PyGame
     - Синтезировать голос Джарвиса как в фильме "Железный человек"
