Some minor refactoring and bug fixes

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,9 @@
        - Поиск сайтов в интернете
        - Перевод слов на другие языки
     - Добавить спящий режим
+    - Добавить системные логи
+    - Научить запускать пиратский Майнкрафт +
+    - Добавить синтез речи как в фильме через Google Speech API
  - Дальнейшие планы:
     - Сделать GUI на PyGame
-    - Синтезировать голос Джарвиса как в фильме "Железный человек"
+    - Синтезировать голос Джарвиса как в фильме "Железный человек"(в оффлайн режиме)
